# chat

./: .env  .gitignore  Cargo.toml  README.md  test.rest
chat_server/: Cargo.toml  app.yaml
chat_server/fixtures/: decoding.pem  encoding.pem
chat_server/sql/: init.sql
chat_server/src/: config.rs  error.rs  lib.rs  main.rs
chat_server/src/handlers/: auth.rs  chat.rs  messages.rs  mod.rs
chat_server/src/middlewares/: mod.rs  server_time.rs
chat_server/src/models/: mod.rs  user.rs
chat_server/src/utils/: jwt.rs  mod.rs
migrations/: 20250804175010_initial.sql
notify_server/: Cargo.toml  index.html
notify_server/src/: lib.rs  main.rs  sse.rs
src/: config.rs  lib.rs  main.rs
src/handlers/: auth.rs  mod.rs
