[package]
name = "chat-server"
version = "0.1.0"
edition = "2024"


[dependencies]
anyhow = {workspace = true}
axum = {workspace = true}
serde = {workspace = true}
serde_yaml = {workspace = true}
sqlx = { workspace = true, features = ["postgres", "runtime-tokio", "tls-rustls", "chrono"] }
thiserror = {workspace = true}
tokio = {workspace = true}
tracing = {workspace = true}
tracing-subscriber = {workspace = true}
chrono = { version = "0.4.41", features = ["serde"]}
argon2 = { version = "0.5.3",features = ["std"] }
jwt-simple = "0.12.12"

[dev-dependencies]
sqlx-db-tester = "0.6.0"
