[package]
name = "chat-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
argon2 = { version = "0.5.3", features = ["std"] }
axum = { workspace = true }
chrono = { version = "0.4.38", features = ["serde"] }
jwt-simple = "0.12.9"
serde = { workspace = true }
serde_json = "1.0.116"
serde_yaml = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tower-http = { version = "0.6.6", features = ["compression-full", "trace"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tower = "0.5.2"
uuid = { version = "1.17.0", features = ["v7","serde"] }
futures-util = "0.3.31"
axum-extra = { version = "0.9.3", features = ["typed-header"] }

[dev-dependencies]
http-body-util = "0.1.1"
sqlx-db-tester = "0.4.0"
